<resources>
    <string name="app_name">GoOut</string>
    <string name="user_register">用户注册</string>
    <string name="company_register">商家注册</string>
    <string name="company_login">商家登录</string>
    <string name="user_login">用户登录</string>
    <string name="login">登录</string>
    <string name="skip">跳过</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Strings related to task -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="id_number">证件</string>
    <string name="foot_mark">我的足迹</string>
    <string name="professional_level">服务专业性等级</string>
    <string name="credit_level">信用与服务等级</string>
    <string name="task_title">•标题</string>
    <string name="task_description">•描述</string>
    <string name="task_address">•地点</string>
    <string name="pay">•报酬</string>
    <string name="task_publish">提交</string>
    <string name="dealline">请选择截止日期</string>
    <string name="upload_picture">上传图片</string>
    <string name="sign_up_people_number">报名人数</string>
    <string name="current_people_number">已招人数</string>
    <string name="max_people_number">•最大人数</string>
    <string name="group_id">对象组号</string>
    <string name="group_title">组名</string>
    <string name="candidate_name">申请人</string>
    <string name="group_description">小组描述</string>
    <string name="logout">注销</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">区</string>
    <string name="primary_work">•主要工作</string>

    <string name="school">学校</string>
    <string name="occupation">职业</string>
    <string name="company_name">公司</string>

    <!-- Strings related to login -->
    <string name="telephone">手机号</string>
    <string name="password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="login_in_submit">登录</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="register">注册</string>
    <string name="error_invalid_telephone">该手机号不可用</string>
    <string name="error_invalid_password">该密码是无效的</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">请填写手机号和密码</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

</resources>
