<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/welcome2"
        android:layout_height="match_parent">
    <!--android:background="@drawable/background"-->
    <include layout="@layout/top_toolbar" android:visibility="invisible"/>

    <Button
            android:text="@string/user_login"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:id="@+id/user_login" android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_marginBottom="43dp"/>
    <Button
            android:text="@string/user_register"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:id="@+id/user_register"
            android:layout_marginBottom="16dp"
            android:layout_above="@+id/user_login" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    <Button
            android:text="@string/skip"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:id="@+id/skip"
            android:layout_alignParentBottom="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
</RelativeLayout>