<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipe_refresh">
    <android.support.design.widget.CoordinatorLayout
            android:id="@+id/activity_moments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.yqbd.yqbdapp.activities.task.SingleTaskActivity">
        <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/moments_appBar">
            <android.support.design.widget.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    android:id="@+id/moments_collapsingToolbar">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"/>
                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/moments_head_portrait"
                        android:layout_height="120dp"
                        android:layout_width="120dp"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax"
                        android:src="@drawable/head"
                        android:paddingBottom="40dp"
                        android:layout_gravity="end|bottom"/>
                <TextView
                        android:text="叶润杰"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/moments_name"
                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_gravity="end|bottom"/>
                <include layout="@layout/top_toolbar"/>


            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/task_title"
                        android:ems="10"
                        android:id="@+id/task_title"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/task_description"
                        android:ems="10"
                        android:id="@+id/task_description"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/task_address"
                        android:ems="10"
                        android:id="@+id/task_address"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text="@string/pay"
                        android:ems="10"
                        android:id="@+id/pay"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@string/max_people_number"
                        android:ems="10"
                        android:id="@+id/max_people_number"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <Button
                            android:text="@string/dealline"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/dealline"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/dealline"
                            android:gravity="center"
                            android:id="@+id/dealline_time"
                            android:textSize="24sp"/>
                </LinearLayout>
                <Button
                        android:text="@string/upload_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/upload_picture"/>
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/default_picture"
                        android:id="@+id/imageView"/>
                <com.yqbd.yqbdapp.tagview.widget.TagListView
                        xmlns:f="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/tagview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/common_margin"
                        android:paddingLeft="@dimen/common_margin"
                        android:paddingRight="@dimen/common_margin"
                        android:paddingTop="16.0dip"
                        f:horizontalSpacing="@dimen/tag_horizontal_spacing"
                        f:orientation="horizontal"
                        f:verticalSpacing="@dimen/tag_vertical_spacing"/>
                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/task_button"/>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>



    </android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.SwipeRefreshLayout>