<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.yqbd.yqbdapp.activities.personal.PersonalActivity">
    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/appBar">
        <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentScrim="?attr/colorPrimaryDark"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:id="@+id/collapsingToolbar">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:background="@drawable/background"
                    android:id="@+id/imageView"/>
            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/head_portrait"
                    android:layout_height="120dp"
                    android:layout_width="120dp"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    android:src="@drawable/head"
                    android:paddingBottom="40dp"
                    android:layout_gravity="end|bottom"/>
            <TextView
                    android:text="叶润杰"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/nick_name"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_gravity="end|bottom"/>
            <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:id="@+id/toolBar"
                    app:layout_collapseMode="pin">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:id="@+id/topToolBarTitle"
                        android:text="标题"
                        android:textSize="22sp"/>
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">
            <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/nick_name"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nick_name"
                        android:id="@+id/nick_name"/>
            </LinearLayout>-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/sex"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sex"
                        android:id="@+id/sex"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/id_number"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/id_number"
                        android:id="@+id/id_number"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/professional_level"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/professional_level"
                        android:id="@+id/professional_level"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/credit_level"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/credit_level"
                        android:id="@+id/credit_level"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/telephone"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telephone"
                        android:id="@+id/telephone"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/school"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/school"
                        android:id="@+id/school"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/occupation"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/occupation"
                        android:id="@+id/occupation"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/company_name"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/company_name"
                        android:id="@+id/company_name"/>
            </LinearLayout>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="我接受的任务"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:id="@+id/my_taken"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:background="@color/red"
                    android:textColor="@color/white"
                    android:id="@+id/logout"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>